BMI calculator problem sovled

--- a/index.html
+++ b/index.html
@@ -3,11 +3,11 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>conditionals Problem</title>
+    <title>Javascript Problems</title>
 </head>
 <body>
     
 
-    <script src="conditionals.js"></script>
+    <script src="problem-5(BMI-calculator).js"></script>
 </body>
 </html>
