--- a/index.html
+++ b/index.html
@@ -8,6 +8,6 @@
 <body>
     
 
-    <script src="problem-6(grate-calculator)).js"></script>
+    <script src="problem-7.js"></script>
 </body>
 </html>
